# aler_auction

./: .env.example  .gitignore  README.md  Untitled.ipynb  auction_data.csv  auction_data.xls  auction_data.xlsx  dataset_generation.ipynb  docker-compose.yml  final_data.csv  house_analysis.ipynb  main.py  pyproject.toml
.agent/: architecture.md  data_schema.md  project.md  tools.md
.agent/agents/: auction_extraction_agent.md  auction_normalization_agent.md  auction_results_agent.md  geocoding_agent.md  (+3 more)
.planning/: PROJECT.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/.playwright-cli/: page-2026-06-05T14-49-02-182Z.yml
backend/app/: main.py
backend/app/data/: loader.py
backend/app/pipeline/: manager.py
backend/app/routers/: auctions.py  pipeline.py
backend/tests/: test_task2.py
data/: auction_detail_urls.json  consolidated_auction_dataset.csv  consolidated_auction_dataset.json  consolidated_auction_dataset_analyzed.csv  consolidated_auction_dataset_analyzed.json  consolidated_auction_dataset_geocoded.csv  consolidated_auction_dataset_geocoded.json  extracted_auctions.csv  extracted_auctions.json  extracted_pdf_results.csv  extracted_pdf_results.json  geocoding_cache.json
docs/: API.md  DATA_PIPELINE.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
notebooks/: aler_auctions_scrapling.ipynb
pipeline/: pyproject.toml
pipeline/scripts/: inspect_pdf_layout.py  run_active_auction_scraper.py  run_data_extraction.py  run_dataset_integration.py  run_detail_fetching.py  run_geocoding.py  run_historical_extraction.py  run_pdf_extraction.py  run_periodic_refresh.py  run_price_analysis.py  run_url_extraction.py  run_wayback_discovery.py
pipeline/src/aler_auctions/data_extraction/: auction_extractor.py  pdf_extractor.py  wayback_client.py
pipeline/src/aler_auctions/data_integration/: dataset_integrator.py  geocoder.py
pipeline/tests/: test_wayback_client.py
pipeline/tests/data_extraction/: test_auction_extractor.py  test_historical_client.py
scripts/: run_active_auction_scraper.py  run_data_extraction.py  run_dataset_integration.py  run_detail_fetching.py  run_geocoding.py  run_historical_extraction.py  run_pdf_extraction.py  run_price_analysis.py  run_url_extraction.py  run_wayback_discovery.py
tests/: test_pdf_extraction.py  test_wayback_client.py
(+236 files in other folders)
