[project]
name = "aler-auction-backend"
version = "0.1.0"
description = "Backend API for ALER auction interactive map"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]>=0.34.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "fastapi[standard]>=0.136.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
