[project]
name = "aler-auctions"
version = "0.1.0"
description = "Data pipeline library for ALER auction extraction, integration and analysis"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "googlemaps>=4.10.0",
    "hdbscan>=0.8.38",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aler_auctions"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
